# Python_full_course

./: .gitignore  .vercelignore  README.md  WORK_LOG.md  coverage_report.json  dialogues_output.json  difficulty_curve_report.json  lesson_analogies.json  lesson_analogies_03.json  lesson_flow_proof.json  mockups-steampunk.html  output_dialogues.json  protagonist_story_audit_report.json  pyproject.toml  python_quest_full_dialogue_scenario_pack.md  requirements.txt  review_schedule_report.json  scenario_quality_audit_report.json  scene_image_qa_report.json  student_experience_audit_report.json  vercel.json
api/: index.py  lessons.json
backend/: .env.example  .gitignore  pyproject.toml  requirements.txt
backend/app/: ast_checker.py  database.py  main.py  models.py  validation_metadata.py
backend/app/data/: lessons.json  recaps.json
backend/app/routers/: analytics.py  beta_access.py  beta_progress.py  glossary.py  lessons.py  mission.py  progress.py  quests.py  quiz.py  recaps.py
backend/app/schemas/: beta_access.py  beta_progress.py
backend/tests/: test_api.py  test_beta_access.py  test_beta_progress.py  test_learning_support_system.py  test_lesson_content_editorial_quality.py  test_mission_checker_v2.py  test_mission_security.py  test_production_truth.py  wider_beta_simulation.py
docs/: EXECUTION_MODEL.md  LESSON_GAP_POLICY.md  adaptive_mission_feedback_system_report.md  analytics_implementation_report.md  audit_false_positive_suppression_report.md  backend_progress_persistence_report.md  beta_landing_implementation_report.md  commercial_readiness_report.md  (+82 more)
(+250 files in other folders)
