[project]
name = "python-quest-backend"
version = "1.0.0"
description = "FastAPI backend for Python Quest interactive course"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.115.5",
    "uvicorn[standard]==0.32.1",
    "pydantic==2.10.3",
]

[tool.uvicorn]
host = "127.0.0.1"
port = 8000
reload = true
